sample yaml file in ansible.

--- a/01-sample.yml
+++ b/01-sample.yml
@@ -12,6 +12,6 @@
     - name: set_fact variable
       set_fact:
         - OUTPUT: OUT.stdout
-    - name: using register vsriable
+    - name: output from set_fact
       debug:
         msg: "{{OUTPUT}}"
