sample yaml file in ansible.

--- a/01-sample.yml
+++ b/01-sample.yml
@@ -9,7 +9,7 @@
         uptime
       register: OUT
     - name: set_fact variable
-      set_fact:
+      ansible.builtin.set_fact:
         OUTPUT: "{{OUT.stdout}}"
     - name: output from set_fact
       debug:
