roboshop rontend appliation.

--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -1,3 +1,4 @@
-- name: frontend task
-  debug:
-    msg: frondend application.
+- name: install Nginx
+  yum:
+    name: Nginx
+    state: installed
