roboshop rontend appliation.

--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -1,3 +1,4 @@
-- name: mongodb application
-  debug:
-    msg: Mogodb application
+- name: copy mongodb repo file
+  copy:
+    src: F:\REPOS\Ansible\roles\mongodb\files\mongodb.repo
+    dest: /etc/yum.repos.d/mongodb.repo
