--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -2,3 +2,14 @@
   copy:
     src: /home/centos/Ansible/roles/mongodb/files/mongodb.repo
     dest: /etc/yum.repos.d/mongodb.repo
+
+- name: install mongodb
+  yum:
+    name: mongodb-org
+    state: installed
+
+- name: update listen address
+  replace:
+    path: /etc/mongod.conf
+    regexp: '127.0.0.1'
+    replcae: '0.0.0.0'
