--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -28,10 +28,10 @@
 
 - name: load catalogue schema
   community.mongodb.mongodb_schema:
-    file: /tmp/mongodb-main/catalogue.js
+    file: "/tmp/mongodb-main/catalogue.js"
     idempotent: yes
 
 - name: load users schema
   community.mongodb.mongodb_schema:
-    file: /tmp/mongodb-main/users.js
+    file: "/tmp/mongodb-main/users.js"
     idempotent: yes
