--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -27,11 +27,11 @@
     remote_src: yes
 
 - name: load catalogue schema
-  community.mongodb.mongodb_schema:
+  community.mongodb.mongodb_shell:
     file: "/tmp/mongodb-main/catalogue.js"
     idempotent: yes
 
 - name: load users schema
-  community.mongodb.mongodb_schema:
+  community.mongodb.mongodb_shell:
     file: "/tmp/mongodb-main/users.js"
     idempotent: yes
