roboshop rontend appliation.

--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -20,11 +20,10 @@
     state: restarted
     enabled: yes
 
-- name: Download and Extrat mongodb
-  unarchive:
-    src: https://github.com/roboshop-devops-project/mongodb/archive/main.zip
-    dest: /tmp
-    remote_src: yes
+- name: download and Extract {{COMPONENT}}
+  include_role:
+    name: common
+    tasks_from: download
 
 - name: load  schema
   community.mongodb.mongodb_shell:
