--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -20,7 +20,7 @@
     state: restarted
     enabled: yes
 
-- name: download and Extract {{COMPONENT}}
+#- name: download and Extract {{COMPONENT}}
   include_role:
     name: common
     tasks_from: download
