roboshop rontend appliation.

--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -21,7 +21,7 @@
 
 - name: copy roboshop configuration
   copy:
-    src: /home/centos/Ansible/roles/frontend/file/roboshop.conf
+    src: roboshop.conf
     dest: /etc/nginx/default.d/roboshop.conf
 
 - name: start nginx
