--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -22,7 +22,7 @@
 - name: copy roboshop configuration
   ansible.builtin.copy:
     src: roboshop.conf
-    dest: /etc/nginx/default.d/roboshop.conf
+    dest: /etc/nginx/default.d/robosho.conf
 
 - name: start nginx
   service:
