roboshop rontend appliation.

--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -1,6 +1,6 @@
 - name: copy mongodb repo file
   copy:
-    src: /home/centos/Ansible/roles/mongodb/files/mongodb.repo
+    src: mongodb.repo
     dest: /etc/yum.repos.d/mongodb.repo
 
 - name: install mongodb
