--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -13,4 +13,9 @@
     name: roboshop
     comment: Roboshop appilcation user
 
+- name: download and Extract {{COMPONENT}}
+  include_role:
+    name: common
+    tasks_from: download
+
 
