--- a/roles/common/tasks/download.yml
+++ b/roles/common/tasks/download.yml
@@ -1,5 +1,5 @@
-- name: Download and Extrat {{COMPONENT}}
+- name: Download and Extrat {{COMMON_COMPONENT}}
   unarchive:
-    src: https://github.com/roboshop-devops-project/{{COMPONENT}}/archive/main.zip
+    src: https://github.com/roboshop-devops-project/{{COMMON_COMPONENT}}/archive/main.zip
     dest: /tmp
     remote_src: yes
