--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -17,7 +17,7 @@
 - name: Fetch default root password
   ansible.builtin.shell:
     grep "temporary password" /var/log/mysqld.log | awk '{print $NF}'
-  register temp_password
+  register: temp_password
 
 - name: update mysql root password
   mysql_user:
