--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -22,7 +22,7 @@
 - name: update mysql root password
   mysql_user:
     login_user: root
-    login_password: {{temp_password}}
+    login_password: "{{temp_password}}"
     name: root
     password: "{{RoboShoop@1}}"
     priv: "*.*:ALL,GRANT"
