--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -24,5 +24,5 @@
     login_user: root
     login_password: "{{temp_password}}"
     name: root
-    password: "{{RoboShoop@1}}"
+    password: RoboShoop@1
     priv: "*.*:ALL,GRANT"
