--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -23,7 +23,7 @@
 
 - name: debug
   debug:
-    msg: "{{temp_password.stdout}}"
+    msg: {{temp_password.stdout}}
 
 - name: update mysql root password
   mysql_user:
