--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -25,7 +25,7 @@
   community.mysql.mysql_info:
     login_user: root
     login_password: RoboShop@1
-  ignore_errors: yes
+#  ignore_errors: yes
   register: mysql_stat
 
 
