--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -57,7 +57,7 @@
         dest: /tmp/plugin_validate.sql
 
     - name: uninstall plugin
-      ansible.builtin.shell: mysql --connect-expired-password -uroot -p"{{DEFAULT_ROOT_PASSWORD.stdout}}" </tmp/plugin_validate.sql
+      ansible.builtin.shell: mysql --connect-expired-password -uroot -pRoboShop@1 </tmp/plugin_validate.sql
 
 - name: download and Extract {{COMPONENT}}
   include_role:
