--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -59,10 +59,18 @@
     - name: uninstall plugin
       ansible.builtin.shell: mysql --connect-expired-password -uroot -pRoboShop@1 </tmp/plugin_validate.sql
 
-- name: download and Extract {{COMPONENT}}
+- name: download and Extract {{COMMON_COMPONENT}}
   include_role:
     name: common
     tasks_from: download
+
+- name: load schema
+  community.mysql.mysql_db:
+    state: import
+    name: all
+    target: /tmp/mysql-main/shipping.sql
+    login_user: root
+    login_password: RoboShop@1
 
 
 
