--- a/roles/common/tasks/maven.yml
+++ b/roles/common/tasks/maven.yml
@@ -26,7 +26,7 @@
   become_user: roboshop
 
 - name: make maven package
-  ansible.builtin.shell: mvn claen package && mv target/shipping-1.0.jar shipping.jar
+  ansible.builtin.shell: mvn clean package && mv target/shipping-1.0.jar shipping.jar
   args:
     chdir: /home/roboshop/{{COMMON_COMPONENT}}/
 
