--- a/roles/common/tasks/nodejs.yml
+++ b/roles/common/tasks/nodejs.yml
@@ -8,43 +8,19 @@
       - gcc-c++
     state: installed
 
-- name: Add application user
-  ansible.builtin.user:
-    name: roboshop
-    comment: Roboshop appilcation user
-
-- name: download and Extract {{COMMON_COMPONENT}}
+- name: Setup App user, download and Extract {{COMMON_COMPONENT}}
   include_role:
     name: common
     tasks_from: download
-
-- name: Removing old content file
-  ansible.builtin.file:
-    path: /home/roboshop/{{COMMON_COMPONENT}}/
-    state: absent
-
-- name: Add app content
-  ansible.builtin.copy:
-    src: /tmp/{{COMMON_COMPONENT}}-main/
-    dest: /home/roboshop/{{COMMON_COMPONENT}}/
-    remote_src: yes
-  become_user: roboshop
 
 - name: Install NodeJS dependecies based on package.json.
   community.general.npm:
     path: /home/roboshop/{{COMMON_COMPONENT}}
 
-- name: Copy systemd service file
-  ansible.builtin.copy:
-    src: systemd.service
-    dest: /etc/systemd/system/{{COMMON_COMPONENT}}.service
-
-- name: Start {{COMMON_COMPONENT}} service
-  ansible.builtin.service:
-    name: "{{COMMON_COMPONENT}}"
-    state: started
-    enabled: yes
-    daemon_reload: yes
+- name: setup systemd
+  include_role:
+    name: common
+    tasks_from: systemd
 
 
 
