--- a/roles/rabbitmq/tasks/main.yml
+++ b/roles/rabbitmq/tasks/main.yml
@@ -19,7 +19,7 @@
   community.rabbitmq.rabbitmq_user:
     user: roboshop
     password: roboshop123
-    tag: administrator
+    tags: administrator
     vhost: /
     configure_priv: .*
     read_priv: .*
