--- a/roles/common/tasks/python.yml
+++ b/roles/common/tasks/python.yml
@@ -16,9 +16,17 @@
     requirements: /home/roboshop/{{COMMON_COMPONENT}}/requirements.txt
     executable: pip3
 
-- name: print
-  debug:
-    msg: "{{APP_USER_REGISTER}}"
+- name: Update UserID in APP configuration
+  ansible.builtin.lineinfile:
+    path: /home/roboshop/{{COMMON_COMPONENT}}/{{COMMON_COMPONENT}}.ini
+    regexp: '^uid'
+    line: uid = {{APP_USER_REGISTER.uid}}
+
+- name: Update group in APP configuration
+  ansible.builtin.lineinfile:
+    path: /home/roboshop/{{COMMON_COMPONENT}}/{{COMMON_COMPONENT}}.ini
+    regexp: '^gid'
+    line: gid = {{APP_USER_REGISTER.group}}
 
 - name: setup systemd
   include_role:
