--- a/roles/common/tasks/download.yml
+++ b/roles/common/tasks/download.yml
@@ -4,7 +4,7 @@
     comment: Roboshop appilcation user
   register: APP_USER_REGISTER
 
-- name: Download and Extrat {{COMMON_COMPONENT}}
+- name: Download and Extract {{COMMON_COMPONENT}}
   unarchive:
     src: https://github.com/roboshop-devops-project/{{COMMON_COMPONENT}}/archive/main.zip
     dest: /tmp
