--- a/roles/common/tasks/python.yml
+++ b/roles/common/tasks/python.yml
@@ -16,6 +16,10 @@
     requirements: /home/roboshop/{{COMMON_COMPONENT}}/requirements.txt
     executable: pip3
 
+- name: print
+  debug:
+    msg: "{{APP_USER_REGISTER.group}}"
+
 - name: Update UserID in APP configuration
   ansible.builtin.lineinfile:
     path: /home/roboshop/{{COMMON_COMPONENT}}/{{COMMON_COMPONENT}}.ini
