--- a/roles/common/tasks/nodejs.yml
+++ b/roles/common/tasks/nodejs.yml
@@ -13,7 +13,7 @@
     name: common
     tasks_from: download
 
-- name: Install NodeJS dependecies based on package.json.
+- name: Install NodeJS dependecies based on package.json
   community.general.npm:
     path: /home/roboshop/{{COMMON_COMPONENT}}
 
