--- a/roles/common/tasks/nodejs.yml
+++ b/roles/common/tasks/nodejs.yml
@@ -13,7 +13,7 @@
     name: common
     tasks_from: download
   vars:
-    APP_LOCATION: "/home/roboshop/{{COMMON_COMPONENT}}"
+    - APP_LOCATION: "/home/roboshop/{{COMMON_COMPONENT}}"
 
 - name: Install NodeJS dependecies based on package.json
   community.general.npm:
