--- a/roles/common/tasks/download.yml
+++ b/roles/common/tasks/download.yml
@@ -13,6 +13,7 @@
   ansible.builtin.file:
     path: "{{APP_LOCATION}}"
     state: directory
+  become_user: "{ { APP_USER } }"
 
 
 ########## Download rom GitHub #################
@@ -28,7 +29,7 @@
     src: http://nexus.egaroboshop.online:8081/repository/{{COMMON_COMPONENT}}/{{COMMON_COMPONENT}}-1.0.0.zip
     dest: "{{APP_LOCATION}}"
     remote_src: yes
-  become_user: "{ { APP_USER } }"
+  become_user: roboshop
 #
 #- name: Add app content
 #  ansible.builtin.copy:
