--- a/roles/common/tasks/download.yml
+++ b/roles/common/tasks/download.yml
@@ -13,7 +13,7 @@
   ansible.builtin.file:
     path: "{{APP_LOCATION}}"
     state: directory
-  become_user: roboshop
+  become_user: "{{APP_USER}}"
 
 
 ########## Download rom GitHub #################
