recreating and downloading nexus frontend

--- a/roles/frontend/files/roboshop.conf
+++ b/roles/frontend/files/roboshop.conf
@@ -21,6 +21,8 @@
 
     location /api/payment/ { proxy_pass http://payment.egaroboshop.online:8080/; }
 
+    location /api/user/ { proxy_pass http://user.egaroboshop.online:8080/; }
+
     location /nginx_status {
         stub_status on;
         access_log off;
